...
                        
                    }) {
                        Image(systemName: "magnifyingglass.circle.fill")
                            .font(.largeTitle)
                            .foregroundColor(.blue)
                        
                    }.accessibility(identifier: "search_bar_button")
                )
                
            }.alert(isPresented: $showInputAlert) { () -> Alert in
                
                Alert(title: Text(LocalizedStringKey("missing_input")),
                             message: Text(LocalizedStringKey("missing_input_text")),
                             dismissButton: .default(Text(LocalizedStringKey("Ok"))))
            }
            
            if showSearch {
                
                SearchView(results: { result in
                    
...
